# steel-as

./: LICENSE  LICENSE.md  MANIFEST.in  README.md  TODO.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  install.md  reference.md  tutorial-1.md  tutorial-2.md  tutorial-3.md
examples/: tutorial_1.py  tutorial_2.py  tutorial_3.py
src/steelas/: __init__.py
src/steelas/component/: __init__.py  bolt.py  plate.py  weld.py
src/steelas/connection/: FEP.py  WSP.py  __init__.py  featured_member.py
src/steelas/data/: ASI_FEP_connection.csv  ASI_WSP_connection.csv  AUS_bolt_groups.csv  AUS_bolts.csv  AUS_coped_sections.csv  AUS_hollow_sections.csv  AUS_open_sections.csv  AUS_plates.csv  AUS_tee_sections.csv  AUS_welds.csv  io.py
src/steelas/member/: __init__.py  geometry.py  material.py  member.py  slenderness.py
src/steelas/shape/: circularhollow.py  cshape.py  ishape.py  rectangleplate.py  rectangularhollow.py  tshape.py
